# raytracer

./: .gitignore  CMakeLists.txt  Makefile  README.md  app.cc  display.cc  display.h  models.cc  models.h  raytracer_basics.cc  raytracer_basics.h  renderer.cc  renderer.h  room_scene.cc  room_scene.h  shader.cc  shader.h  sphere.cc  sphere.h  triangle.cc  triangle.h
src/: app.cc  basic_types.cc  basic_types.h  cudastuff.h  disp_sdl.cc  disp_sdl.h  display.cc  display.h  math.cc  math.h  models.cc  models.h  raytracer_basics.cc  raytracer_basics.h  renderer.cc  renderer.cu  renderer.h  room_scene.cc  room_scene.h  shader.cc  shader.h  sphere.cc  sphere.h  triangle.cc  triangle.h
